sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:14: error: type mismatch;
 found   : Unit
 required: Boolean
  } while (verifier(x))
                   ^AlgBubbleSort1:24: warning: enclosing method verifier has result type Unit: return value discarded
  return res
  ^