sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var listeTriee:Boolean=false
  var x=0
  x=getNombreValeurs
  do {
    for (i <- 0 to x-2) {
      listeTriee=false
       if (plusPetit(i+1,i)) {
         echange(i+1,i)
         listeTriee=true
       } 
    }
  } while (verifier(x))
}

def verifier(x:Int) {
  var res:Boolean=false
  for (i <- 1 to x-2) {
    if (plusPetit(i,i+1)) {
      res=true
    }
  }
  return res
}